--- a/wp-content/themes/tensha/css/_header.scss
+++ b/wp-content/themes/tensha/css/_header.scss
@@ -1,74 +1,73 @@
-header{
-    z-index: 100;
-    display: flex;
-    background-color: #EEEAD8;
+// header{
+//     z-index: 100;
+//     display: flex;
+//     background-color: #EEEAD8;
+//     width: 100%;
+//     height: 70px;
+//     border-bottom: 1px solid #000;
+//     justify-content: center;
+// }
+.main_logo {
+  margin: 0 auto;
+  padding-left: 70px;
+  img {
     width: 100%;
-    height: 70px;
-    border-bottom: 1px solid #000;
-    justify-content: center;
+    height: 100%;
+    object-fit: cover;
+  }
 }
-.main_logo{
-    margin: 0 auto;
-    padding-left: 70px;
-    img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+.openbtn {
+  position: relative;
+  cursor: pointer;
+  width: 70px;
+  height: 70px;
+  & span {
+    display: inline-block;
+    transition: all 0.4s;
+    position: absolute;
+    left: 14px;
+    height: 3px;
+    border-radius: 5px;
+    background: #000;
+    width: 45%;
+    &:nth-of-type(1) {
+      top: 15px;
     }
-}
-.openbtn{
-    position: relative;
-    cursor: pointer;
-    width: 70px;
-    height: 70px;
-    & span{
-        display: inline-block;
-        transition: all .4s;
-        position: absolute;
-        left: 14px;
-        height: 3px;
-        border-radius: 5px;
-        background: #000;
-        width: 45%;
-        &:nth-of-type(1){
-            top: 15px;
-        }
-        &:nth-of-type(2){
-            top: 25px;
-        }
-        &:nth-of-type(3){
-            top: 35px;
-        }
-        &:nth-of-type(3)::after{
-            content: "MENU";
-            position: absolute;
-            top: 10px;
-            left: 1px;
-            color: #000;
-            font-size: 1rem;
-        }
+    &:nth-of-type(2) {
+      top: 25px;
     }
+    &:nth-of-type(3) {
+      top: 35px;
+    }
+    &:nth-of-type(3)::after {
+      content: "MENU";
+      position: absolute;
+      top: 10px;
+      left: 1px;
+      color: #000;
+      font-size: 1rem;
+    }
+  }
 
-    &.active span{
-        &:nth-of-type(1){
-            top: 20px;
-            left: 15px;
-            transform: translateY(6px) rotate(-45deg);
-        }
-        &:nth-of-type(2){
-            opacity: 0;
-        }
-        &:nth-of-type(3){
-            top: 31px;
-            left: 15px;
-            transform: translateY(-6px) rotate(45deg);
-        }
-        &:nth-of-type(3)::after{
-            content: "CLOSE";
-            transform: translateY(0) rotate(-45deg);
-            top: 15px;
-            left: 18px;
-        }
-
+  &.active span {
+    &:nth-of-type(1) {
+      top: 20px;
+      left: 15px;
+      transform: translateY(6px) rotate(-45deg);
     }
+    &:nth-of-type(2) {
+      opacity: 0;
+    }
+    &:nth-of-type(3) {
+      top: 31px;
+      left: 15px;
+      transform: translateY(-6px) rotate(45deg);
+    }
+    &:nth-of-type(3)::after {
+      content: "CLOSE";
+      transform: translateY(0) rotate(-45deg);
+      top: 15px;
+      left: 18px;
+    }
+  }
 }
