--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -404,11 +404,12 @@ footer {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  background-color: #341800;
+  background-color: #341801;
   @include m.mq(sp) {
     flex-direction: column;
   }
   .com_info {
+    width: 33%;
     margin: 20px;
     color: #fff;
     font-size: 1.5rem;
@@ -418,20 +419,23 @@ footer {
     }
   }
   .f_logo {
+    text-align: center;
+    width: 33%;
     justify-self: center;
-    width: 300px;
     padding: 50px 0;
     @include m.mq(sp) {
       width: 200px;
       padding: 0;
     }
     img {
-      width: 100%;
+      width: 50%;
       object-fit: contain;
     }
   }
   .f_link {
+    width: 33%;
     align-self: flex-end;
+    text-align: right;
     @include m.mq(sp) {
       width: 100%;
       display: flex;
