--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -284,6 +284,7 @@
         }
       }
       p {
+        margin-top: 0;
         font-size: 2rem;
         line-height: 4rem;
         @include m.mq(sp) {
