ニュースセクション完成

--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -128,6 +128,11 @@
       dt {
         justify-self: start;
       }
+      dd {
+        a {
+          color: #000;
+        }
+      }
     }
   }
 }
