shop_infoの幅を調整

--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -256,6 +256,7 @@
       align-items: center;
     }
     .shop_info {
+      width: 30%;
       margin: 0 5%;
       display: flex;
       flex-direction: column;
