--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -420,6 +420,15 @@ h1 {
   left: 0;
 }
 
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow-y: hidden;
+}
+
 .news {
   position: relative;
   background-color: #fff;
@@ -638,7 +647,7 @@ h1 {
 .shops .shop .shop_info h2::after {
   position: absolute;
   content: "";
-  width: 38rem;
+  width: 95%;
   height: 10px;
   background-image: url(../img/shop_bar.png);
   background-blend-mode: lighten;
