--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -94,6 +94,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
+  max-height: 1200px;
   overflow-y: hidden;
 }
 
@@ -394,6 +395,9 @@
         border: 1px solid #000;
         width: 100%;
         aspect-ratio: 3/2;
+        @include m.mq(sp) {
+          aspect-ratio: 3/5;
+        }
       }
       a {
         display: flex;
