--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -426,6 +426,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100vh;
+  max-height: 1200px;
   overflow-y: hidden;
 }
 
@@ -767,6 +768,11 @@ h1 {
   border: 1px solid #000;
   width: 100%;
   aspect-ratio: 3/2;
+}
+@media screen and (max-width: 768px) {
+  .floormap .maps .g_map iframe {
+    aspect-ratio: 3/5;
+  }
 }
 .floormap .maps .g_map a {
   display: flex;
