--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -620,6 +620,7 @@ h1 {
   }
 }
 .shops .shop .shop_info {
+  min-height: 392px;
   width: 30%;
   margin: 0 5%;
   display: flex;
@@ -640,8 +641,15 @@ h1 {
   position: relative;
   font-size: 6rem;
 }
+@media screen and (max-width: 1024px) {
+  .shops .shop .shop_info h2 {
+    max-width: 500px;
+    text-align: center;
+  }
+}
 @media screen and (max-width: 768px) {
   .shops .shop .shop_info h2 {
+    text-align: center;
     font-size: 5rem;
   }
 }
@@ -654,12 +662,18 @@ h1 {
   background-blend-mode: lighten;
   background-size: cover;
   left: -2rem;
-  bottom: 0;
+  bottom: -5px;
+  transform: translateX(5%);
+}
+@media screen and (max-width: 1024px) {
+  .shops .shop .shop_info h2::after {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 768px) {
   .shops .shop .shop_info h2::after {
-    width: 30rem;
-    left: -1rem;
+    width: 90%;
+    left: 0;
   }
 }
 .shops .shop .shop_info p {
