--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -146,7 +146,7 @@
     color: #000;
     font-size: 2rem;
     border-bottom: 1px solid #000;
-    transition: all 0.2s;
+    transition: all 0.25s;
     &:hover {
       opacity: 0.3;
     }
@@ -278,6 +278,10 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      @include m.mq(mid) {
+        width: 40%;
+        margin: 0 2.5%;
+      }
       @include m.mq(tab) {
         width: 80%;
       }
