--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -741,3 +741,48 @@ footer {
   font-size: 2rem;
   align-self: flex-start;
 }
+
+//newspage
+.news_page_list {
+  max-width: 1300px;
+  margin: 5% 10%;
+  li {
+    width: 100%;
+    border-bottom: 1px solid #000;
+    padding: 20px 0;
+    list-style: none;
+    border-collapse: collapse;
+    &:first-child {
+      border-top: 1px solid #000;
+    }
+  }
+  h2 {
+    font-size: 2rem;
+    span {
+      font-size: 1.5rem;
+      text-align: right;
+    }
+  }
+}
+.news_page_thumbnail {
+  width: 60%;
+  img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
+.pagination {
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    a:hover {
+      opacity: 0.7;
+    }
+  }
+  li {
+    padding: 0 10px;
+  }
+}
