--- a/wp-content/themes/tensha/css/_set.scss
+++ b/wp-content/themes/tensha/css/_set.scss
@@ -10,6 +10,10 @@ html {
 body {
   background-image: url(../img/background_washi.jpeg);
 }
+main {
+  background: #fff;
+  padding: 200px;
+}
 .container {
   max-width: 1920px;
   margin: 0 auto;
@@ -22,7 +26,10 @@ body {
 }
 a {
   text-decoration: none;
-  color: #fff;
+  color: #000;
+}
+li {
+  list-style: none;
 }
 h1 {
   font-weight: 800;
@@ -275,6 +282,21 @@ h1 {
       opacity: 1;
       transform: translateY(0);
     }
+  }
+}
+//pagination
+.pagination {
+  font-size: 1.7rem;
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    a:hover {
+      opacity: 0.7;
+    }
+  }
+  li {
+    padding: 0 10px;
   }
 }
 
