--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -745,7 +745,7 @@ footer {
 //newspage
 .news_page_list {
   max-width: 1300px;
-  margin: 5% 10%;
+  margin: 5%;
   li {
     width: 100%;
     border-bottom: 1px solid #000;
@@ -765,24 +765,11 @@ footer {
   }
 }
 .news_page_thumbnail {
-  width: 60%;
+  width: 75%;
   img {
     width: auto;
     height: auto;
     max-width: 100%;
     max-height: 100%;
-  }
-}
-.pagination {
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    a:hover {
-      opacity: 0.7;
-    }
-  }
-  li {
-    padding: 0 10px;
   }
 }
