--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -14,6 +14,11 @@ main {
   background: #fff;
   padding: 200px 0;
 }
+@media screen and (max-width: 768px) {
+  main {
+    padding: 100px 0 200px 0;
+  }
+}
 
 .container {
   max-width: 1920px;
@@ -1198,7 +1203,7 @@ footer .f_link img {
 
 .news_page_list {
   padding: 0;
-  max-width: 1300px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 @media screen and (max-width: 1024px) {
@@ -1240,7 +1245,7 @@ footer .f_link img {
 }
 
 .news_page_thumbnail {
-  width: 75%;
+  width: 80%;
 }
 @media screen and (max-width: 768px) {
   .news_page_thumbnail {
