--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -487,55 +487,49 @@ footer {
   }
 }
 //shopページ
-.shop_visu {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  background-image: url(../img/paintV3_shop1_visu1.jpg);
-  background-position: center center;
-  .shop_title {
-    z-index: 999;
-    position: absolute;
-    border-top: #341800 5px solid;
-    border-left: #341800 5px solid;
-    border-bottom: rgb(240, 241, 229) 3px solid;
-    border-radius: 10px 0 0 0;
-    bottom: -5px;
-    right: 0;
-    width: 450px;
-    height: 140px;
-    background-color: rgb(240, 241, 229);
+.hero_title {
+  z-index: 999;
+  position: absolute;
+  border-top: #341800 5px solid;
+  border-left: #341800 5px solid;
+  border-bottom: rgb(240, 241, 229) 3px solid;
+  border-radius: 10px 0 0 0;
+  bottom: -5px;
+  right: 0;
+  width: 450px;
+  height: 140px;
+  background-color: rgb(240, 241, 229);
+  @include m.mq(sp) {
+    background-color: #341800;
+    width: 100vw;
+    height: 100px;
+    bottom: 0;
+    border-bottom: 0;
+  }
+  h1 {
+    position: relative;
+    top: -35px;
+    color: rgb(245, 90, 0);
+    text-align: center;
+    font-size: 6.5rem;
+    padding-top: 10px;
     @include m.mq(sp) {
-      background-color: #341800;
-      width: 100vw;
-      height: 100px;
-      bottom: 0;
-      border-bottom: 0;
+      margin: 0;
+      top: -5px;
+      font-size: 5.3rem;
     }
-    h1 {
+    span {
       position: relative;
-      top: -35px;
-      color: rgb(245, 90, 0);
-      text-align: center;
-      font-size: 6.5rem;
-      padding-top: 10px;
+      bottom: 30px;
+      color: #ffba00;
+      font-size: 2.2rem;
       @include m.mq(sp) {
-        margin: 0;
-        top: -5px;
-        font-size: 5.3rem;
-      }
-      span {
-        position: relative;
-        bottom: 30px;
-        color: #ffba00;
-        font-size: 2.2rem;
-        @include m.mq(sp) {
-          font-size: 1.8rem;
-        }
+        font-size: 1.8rem;
       }
     }
   }
 }
+
 .info {
   border-top: #341800 5px solid;
   padding-bottom: 10%;
