--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -521,10 +521,13 @@ footer {
     span {
       position: relative;
       bottom: 30px;
-      color: #ffba00;
       font-size: 2.2rem;
       @include m.mq(sp) {
         font-size: 1.8rem;
+      }
+      a {
+        letter-spacing: 0.5rem;
+        color: #ffba00 !important;
       }
     }
   }
