--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -118,7 +118,8 @@
     font-size: 2rem;
     text-align: center;
     dl {
-      padding: 1% 0;
+      margin: 0;
+      padding: 40px 0;
       width: 60%;
       display: flex;
       justify-content: flex-start;
