--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -535,7 +535,6 @@ footer {
 }
 
 .info {
-  border-top: #341800 5px solid;
   padding-bottom: 10%;
   background-color: rgb(240, 241, 229);
   @include m.mq(sp) {
@@ -609,7 +608,7 @@ footer {
     font-size: 1.6rem;
     line-height: 2.5rem;
     text-align: right;
-    margin: 7% 10% 0 0;
+    margin: 0 10% 0 0;
     @include m.mq(sp) {
       margin: 15% 3% 0 0;
     }
