--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -548,14 +548,48 @@ footer {
   .menu_point {
     margin-top: 100px;
     h3 {
+      position: relative;
       margin-top: 0;
       font-size: 4rem;
+      padding: 15px 0;
+      background-color: #ffedca;
+      border-top: 5px dashed #ffba00;
+      border-bottom: 5px dashed #ffba00;
+      @include m.mq(sp) {
+        font-size: 3.5rem;
+        max-width: 100vw;
+      }
     }
-    .menu_point_txt {
-      padding: 0 50px;
+    &_txt {
+      padding: 5% 3%;
+      background-color: rgb(240, 241, 229);
+      border: #341800 3px solid;
+      border-radius: 50px;
+      min-height: 65%;
+      line-height: 4rem;
+      font-size: 2rem;
+    }
+
+    figure {
+      text-align: center;
+      img {
+        box-shadow: 0 0 10px 10px #ffefd5;
+      }
+      figcaption {
+        margin-top: 20px;
+        font-size: 1.5rem;
+      }
+    }
+    &_img {
+      margin-top: 10%;
+      border-radius: 20px;
     }
     p {
+      margin: 30px 0;
       font-size: 2rem;
+      @include m.mq(sp) {
+        font-size: 1.7rem;
+      }
     }
   }
   .genre {
