--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -975,14 +975,51 @@ footer .f_link img {
   margin-top: 100px;
 }
 .info .menu_point h3 {
+  position: relative;
   margin-top: 0;
   font-size: 4rem;
+  padding: 15px 0;
+  background-color: #ffedca;
+  border-top: 5px dashed #ffba00;
+  border-bottom: 5px dashed #ffba00;
 }
-.info .menu_point .menu_point_txt {
-  padding: 0 50px;
+@media screen and (max-width: 768px) {
+  .info .menu_point h3 {
+    font-size: 3.5rem;
+    max-width: 100vw;
+  }
+}
+.info .menu_point_txt {
+  padding: 5% 3%;
+  background-color: rgb(240, 241, 229);
+  border: #341800 3px solid;
+  border-radius: 50px;
+  min-height: 65%;
+  line-height: 4rem;
+  font-size: 2rem;
+}
+.info .menu_point figure {
+  text-align: center;
+}
+.info .menu_point figure img {
+  box-shadow: 0 0 10px 10px #ffefd5;
+}
+.info .menu_point figure figcaption {
+  margin-top: 20px;
+  font-size: 1.5rem;
+}
+.info .menu_point_img {
+  margin-top: 10%;
+  border-radius: 20px;
 }
 .info .menu_point p {
+  margin: 30px 0;
   font-size: 2rem;
+}
+@media screen and (max-width: 768px) {
+  .info .menu_point p {
+    font-size: 1.7rem;
+  }
 }
 .info .genre {
   margin: 0 auto;
