--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -383,6 +383,8 @@
 .floormap {
   background-color: rgb(240, 241, 229);
   .maps {
+    max-width: 1000px;
+
     margin: 7% auto;
     width: 70%;
     display: flex;
