--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -525,6 +525,8 @@ footer {
       position: relative;
       bottom: 30px;
       font-size: 2.2rem;
+      color: #ffba00 !important;
+
       @include m.mq(sp) {
         font-size: 1.8rem;
       }
@@ -608,7 +610,7 @@ footer {
     margin: 0 auto;
     padding: 100px 0;
     width: 70%;
-    max-width: 1000px;
+    max-width: 800px;
     display: flex;
     justify-content: space-between;
     align-items: center;
