--- a/wp-content/themes/tensha/css/_set.scss
+++ b/wp-content/themes/tensha/css/_set.scss
@@ -61,6 +61,9 @@ h1 {
     width: 120px;
   }
   li {
+    span {
+      color: #ffba00;
+    }
     &:nth-of-type(1) {
       top: 350px;
       left: 40px;
