--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -94,6 +94,9 @@ h1 {
   font-weight: bold;
   color: rgb(243, 117, 0);
 }
+.menu li span {
+  color: #ffba00;
+}
 .menu li:nth-of-type(1) {
   top: 350px;
   left: 40px;
@@ -947,6 +950,7 @@ footer .f_link img {
   position: relative;
   bottom: 30px;
   font-size: 2.2rem;
+  color: #ffba00 !important;
 }
 @media screen and (max-width: 768px) {
   .hero_title h1 span {
@@ -1036,7 +1040,7 @@ footer .f_link img {
   margin: 0 auto;
   padding: 100px 0;
   width: 70%;
-  max-width: 1000px;
+  max-width: 800px;
   display: flex;
   justify-content: space-between;
   align-items: center;
