フッターのロゴが小さすぎる問題を修正

--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -471,6 +471,9 @@ footer {
     img {
       width: 50%;
       object-fit: contain;
+      @include m.mq(sp) {
+        width: 100%;
+      }
     }
   }
   .f_link {
