--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -341,6 +341,10 @@
           color: #000;
           font-size: 2rem;
           border-bottom: 1px solid #000;
+          transition: all 0.3s;
+          &:hover {
+            opacity: 0.3;
+          }
         }
         .icons {
           img {
@@ -838,6 +842,10 @@ footer {
     padding: 20px 0;
     list-style: none;
     border-collapse: collapse;
+    transition: all 0.3s;
+    &:hover {
+      background: rgb(223, 224, 211);
+    }
     &:first-child {
       border-top: 1px solid #000;
     }
