--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -986,7 +986,7 @@ footer .f_link img {
   max-width: 1200px;
 }
 .info .menu_point {
-  margin-top: 100px;
+  margin-top: 70px;
 }
 @media screen and (max-width: 768px) {
   .info .menu_point {
@@ -1021,7 +1021,7 @@ footer .f_link img {
   text-align: center;
 }
 .info .menu_point figure img {
-  box-shadow: 0 0 3px 3px #a8a8a8;
+  box-shadow: 0 0 10px 3px #c8c8c8;
 }
 .info .menu_point figure figcaption {
   margin-top: 20px;
@@ -1092,6 +1092,9 @@ footer .f_link img {
 .info .genre .genre_in img {
   height: 75%;
   padding: 0 10px;
+}
+.info .genre .genre_in:last-child {
+  opacity: 0.5;
 }
 .info .genre .genre_in:last-child img {
   padding: 0 5px;
