--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -218,10 +218,20 @@
       margin-left: -7%;
     }
     .ap_i {
+      position: relative;
       opacity: 0;
-      box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, 0.357);
       @include m.mq(sp) {
         box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.357);
+      }
+      &::after {
+        box-shadow: inset 0 0 100px -50px rgba(255, 255, 255, 1);
+
+        content: "";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
       }
       &:nth-of-type(1) {
         background-image: url(../img/paintV3_shop1_visu1.jpg);
@@ -266,6 +276,9 @@
   @include m.mq(sp) {
     padding: 25% 0;
   }
+  .even {
+    flex-direction: row-reverse;
+  }
   .shop {
     opacity: 0;
     padding: 6% 0;
@@ -273,9 +286,10 @@
     justify-content: center;
     @include m.mq(tab) {
       padding: 15% 0;
-      flex-direction: column;
+      flex-direction: column-reverse;
       align-items: center;
     }
+
     .shop_info {
       min-height: 392px;
       width: 30%;
@@ -363,7 +377,7 @@
       max-width: 750px;
       // height: 400px;
       border-radius: 22% 46% 57% 43% / 44% 33% 27% 20%;
-      background-color: #000;
+      background-color: #ff8800;
       @include m.mq(tab) {
         width: 98%;
         max-width: 750px;
@@ -799,7 +813,7 @@ footer {
     dl {
       font-size: 2.3rem;
       margin: 0;
-      padding: 4% 5%;
+      padding: 3% 5%;
       display: flex;
       justify-content: space-between;
       &:nth-of-type(odd) {
@@ -1034,5 +1048,31 @@ input[type="submit"]:hover {
   }
   input[type="submit"] {
     font-size: 1.5rem;
+  }
+}
+//shopplay
+.shop_play {
+  .shop_play_main {
+    margin: 100px 0;
+    display: flex;
+    justify-content: center;
+    @include m.mq(sp) {
+      flex-direction: column;
+      align-items: center;
+    }
+    .shop_play_img {
+      position: relative;
+      width: 35%;
+      @include m.mq(tab) {
+        width: 45%;
+      }
+      @include m.mq(sp) {
+        width: 95%;
+      }
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
   }
 }
