--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -873,6 +873,11 @@ footer {
     p {
       font-size: 1.7rem;
       margin: 0;
+      @include m.mq(sp) {
+        margin: 10px 0;
+        font-size: 1.5rem;
+        line-height: 2.7rem;
+      }
     }
   }
 
@@ -890,6 +895,10 @@ footer {
     font-size: 2rem;
     border-radius: 10px;
     transition: all 0.2s;
+    @include m.mq(sp) {
+      width: 50%;
+      font-size: 1.7rem;
+    }
     &:hover {
       opacity: 0.7;
     }
@@ -908,7 +917,7 @@ footer {
     margin: 0;
     border-bottom: 2px solid rgb(69, 36, 0);
     @include m.mq(sp) {
-      font-size: 1.6rem;
+      font-size: 2rem;
     }
     span {
       padding-bottom: 20px;
@@ -922,6 +931,7 @@ footer {
 }
 .pagination {
   ul {
+    padding: 0;
     li {
       position: relative;
       margin: 30px 0.5%;
