--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -1344,6 +1344,13 @@ footer .f_link img {
   font-size: 1.7rem;
   margin: 0;
 }
+@media screen and (max-width: 768px) {
+  .news_page_list li p {
+    margin: 10px 0;
+    font-size: 1.5rem;
+    line-height: 2.7rem;
+  }
+}
 .news_page_list .news_link_btn {
   color: #fff;
   position: relative;
@@ -1358,6 +1365,12 @@ footer .f_link img {
   font-size: 2rem;
   border-radius: 10px;
   transition: all 0.2s;
+}
+@media screen and (max-width: 768px) {
+  .news_page_list .news_link_btn {
+    width: 50%;
+    font-size: 1.7rem;
+  }
 }
 .news_page_list .news_link_btn:hover {
   opacity: 0.7;
@@ -1378,7 +1391,7 @@ footer .f_link img {
 }
 @media screen and (max-width: 768px) {
   .news_page_list h2 {
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
 }
 .news_page_list h2 span {
@@ -1392,6 +1405,9 @@ footer .f_link img {
   }
 }
 
+.pagination ul {
+  padding: 0;
+}
 .pagination ul li {
   position: relative;
   margin: 30px 0.5%;
