--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -1331,7 +1331,7 @@ footer .f_link img {
 .news_one {
   display: flex;
   flex-direction: column;
-  max-width: 1000px;
+  max-width: 900px;
   width: 60%;
   padding: 60px 5% 0 5%;
   margin: 0 auto;
@@ -1392,6 +1392,12 @@ footer .f_link img {
   background: #fff;
   border-radius: 20px;
 }
+@media screen and (max-width: 768px) {
+  .news_page_list li {
+    width: 90%;
+    padding: 20px 5%;
+  }
+}
 .news_page_list li p {
   font-size: 1.7rem;
   margin: 0;
@@ -1420,6 +1426,7 @@ footer .f_link img {
 }
 @media screen and (max-width: 768px) {
   .news_page_list .news_link_btn {
+    height: 45px;
     width: 50%;
     font-size: 1.7rem;
   }
@@ -1534,12 +1541,26 @@ footer .f_link img {
   }
 }
 .prev_next .prev {
+  width: 30%;
+  max-width: 150px;
+  position: relative;
   border-radius: 10px;
-  padding: 5px 30px;
+  padding: 5px 0;
   background-color: rgb(69, 36, 0);
   margin-right: auto;
+  text-align: center;
+  color: #fff;
+  transition: all 0.2s;
+}
+.prev_next .prev:hover {
+  opacity: 0.7;
 }
 .prev_next .prev a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   color: #fff;
 }
 @media screen and (max-width: 768px) {
@@ -1552,11 +1573,25 @@ footer .f_link img {
 }
 .prev_next .next {
   margin-left: auto;
+  width: 30%;
+  max-width: 150px;
+  position: relative;
   border-radius: 10px;
-  padding: 5px 30px;
+  padding: 5px 0;
   background-color: rgb(69, 36, 0);
+  text-align: center;
+  color: #fff;
+  transition: all 0.2s;
+}
+.prev_next .next:hover {
+  opacity: 0.7;
 }
 .prev_next .next a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   color: #fff;
 }
 @media screen and (max-width: 768px) {
@@ -1568,11 +1603,17 @@ footer .f_link img {
   }
 }
 .prev_next .back_page {
+  width: 30%;
+  max-width: 150px;
   text-align: center;
   border-radius: 10px;
-  padding: 5px 40px;
+  padding: 5px 0;
   background-color: rgb(69, 36, 0);
   margin: auto;
+  transition: all 0.2s;
+}
+.prev_next .back_page:hover {
+  opacity: 0.7;
 }
 .prev_next .back_page a {
   color: #fff;
